--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+riscv = { path = "crate/riscv", features = ["inline-asm"] }
+buddy_system_allocator = "0.1"
+buddy-allocator = { path = "crate/buddy-allocator" }
+lazy_static = { version = "1.3", features = ["spin_no_std"] }
+spin = "0.3"
 
 [profile.dev]
 panic = "abort"
